--- a/GestionDeServicio/app/src/main/res/drawable/splash_screen.xml
+++ b/GestionDeServicio/app/src/main/res/drawable/splash_screen.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <gradient
+                android:startColor="#0178DF"
+                android:centerColor="#233DC2"
+                android:endColor="#000000"
+                android:angle="270" />
+        </shape>
+    </item>
+</layer-list>
