--- a/GestionDeServicio/app/src/main/res/values/themes.xml
+++ b/GestionDeServicio/app/src/main/res/values/themes.xml
@@ -13,4 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="21">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="SplashTheme" parent="Theme.GestionDeServicio">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
 </resources>
